manifests/http-echo-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-http-echo1
  labels:
    app: http-echo1
spec:
  containers:
  - env:
    - name: TCP_PORT
      value: "8080"
    - name: NODE_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: spec.nodeName
    - name: POD_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.name
    - name: POD_NAMESPACE
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.namespace
    - name: POD_IP
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: status.podIP
    - name: SERVICE_ACCOUNT
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: spec.serviceAccountName
    image: files.caas.ford.com/http-echo/http-echo:1.0.0
    imagePullPolicy: IfNotPresent
    name: http-echo
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    resources:
      limits:
        cpu: 300m
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 500Mi
    securityContext:
      capabilities:
        drop:
        - KILL
        - MKNOD
        - SETGID
        - SETUID
  imagePullSecrets:
  - name: http-echo-pull-pull-secret
  serviceAccount: default
  serviceAccountName: default
