manifests/http-echo-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: http-echo-sts
spec:
  podManagementPolicy: OrderedReady
  replicas: 2
  selector:
    matchLabels:
      run: http-echo-sts
  serviceName: "service-name"
  template:
    metadata:
      labels:
        run: http-echo-sts
    spec:
      containers:
      - image: files.caas.ford.com/http-echo/http-echo:1.0.0
        imagePullPolicy: IfNotPresent
        name: http-echo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 500Mi
        volumeMounts:
        - mountPath: /var/www/
          name: www
      imagePullSecrets:
      - name: http-echo-pull-pull-secret
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes:
      - ReadWriteMany
      resources:
        requests:
          storage: 100Mi
      storageClassName: ecc-file-performance
