manifests/http-echo-hless-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-echo-sts
  name: http-echo-sts-svc
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: http-echo-sts
  sessionAffinity: None
  type: ClusterIP
