manifests/http-echo-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-echo
  name: http-echo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo
