manifests/http-echo-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: http-echo
  name: http-echo-sample
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: http-echo
    weight: 100
